removed TextColumn and AbstractStringColumn